--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,17 @@
 
 		<app.runtime>4.3.0</app.runtime>
 		<mule.maven.plugin.version>3.4.1</mule.maven.plugin.version>
-		<munit.version>2.3.0</munit.version>
+		<munit.version>2.3.1</munit.version>
 		<!-- Dependencies versions -->
 		<secure-properties.version>1.2.3</secure-properties.version>
-		<apikit.version>1.3.14</apikit.version>
-		<http.version>1.5.19</http.version>
+		<apikit.version>1.3.16</apikit.version>
+		<http.version>1.5.22</http.version>
 		<sockets.version>1.2.0</sockets.version>
 		<os.version>1.1.5</os.version>
 		<metrics-extension.version>2.2.0</metrics-extension.version>
-		<file.version>1.3.2</file.version>
-		<munit-runner.version>2.3.0</munit-runner.version>
-		<munit-tools.version>2.3.0</munit-tools.version>
+		<file.version>1.3.3</file.version>
+		<munit-runner.version>${munit.version}</munit-runner.version>
+		<munit-tools.version>${munit.version}</munit-tools.version>
 	</properties>
 
 	<build>
@@ -54,7 +54,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<runtimeVersion>${munit.runtime}</runtimeVersion>
+					<runtimeVersion>${app.runtime}</runtimeVersion>
+					<runtimeProduct>MULE_EE</runtimeProduct>
 					<coverage>
 						<runCoverage>true</runCoverage>
 						<formats>
@@ -104,6 +105,13 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
+			<groupId>com.mulesoft.modules</groupId>
+			<artifactId>mule-secure-configuration-property-module</artifactId>
+			<version>${secure-properties.version}</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<!-- test dependencies -->
+		<dependency>
 			<groupId>com.mulesoft.munit</groupId>
 			<artifactId>munit-runner</artifactId>
 			<version>${munit-runner.version}</version>
@@ -116,12 +124,6 @@
 			<version>${munit-tools.version}</version>
 			<classifier>mule-plugin</classifier>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.mulesoft.modules</groupId>
-			<artifactId>mule-secure-configuration-property-module</artifactId>
-			<version>${secure-properties.version}</version>
-			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
 
